@startuml non_verbose_logging_static

class "<<Singleton>>\nbmw::platform::logger" as Logger {
  - config_: Configuration
  - nvconfig_: NvConfig
  - shared_memory_writer_: SharedMemoryWriter
  - log_entry: log_entry
  --
  + instance(const amp::optional<const bmw::mw::log::detail::Configuration>&, const amp::optional<const bmw::mw::log::NvConfig>&, amp::optional<bmw::mw::log::detail::SharedMemoryWriter>)
  + RegisterType(): amp::optional<bmw::mw::log::detail::TypeIdentifier>
  + get_type_level(): LogLevel
  + get_type_threshold(): LogLevel
  + get_config(): const Configuration&
  + get_non_verbose_config(): const NvConfig&
  + GetSharedMemoryWriter(): SharedMemoryWriter&
  + {static} InjectTestInstance(logger* const logger_ptr): void
}

class "log_entry<T>" as log_entry <<template>> {
  - default_enabled_: bool
  - shared_memory_id_: std::atomic<bmw::mw::log::detail::TypeIdentifier>
  --
  + {static} instance(): log_entry&
  + RegisterTypeGetId(): amp::optional<bmw::mw::log::detail::TypeIdentifier>
  + TrySerializeIntoSharedMemory(T): void
  + TryWriteIntoSharedMemory(const T&): void
  + log_at_time(timestamp_t, const T&): void
  + log_serialized(const char*, const msgsize_t): void
  + enabled(): bool
  + enabled_at(LogLevel): bool
}

class Configuration {
}

class NvConfig {
  - json_path_: const std::string
  - typemap_: bool
  --
  + NvConfig(const std::string&)
  + parseFromJson(): ReadResult
  + getDltMsgDesc(const std::string&): const config::NvMsgDescriptor*
}

class SharedMemoryWriter {
}

class NvMsgDescriptor {
  + id_msg_descriptor_: uint32_t
  + appid_: LoggingIdentifier
  + ctxid_: LoggingIdentifier
  + logLevel_: uint8_t
}

class LoggingIdentifier {
}

package "Free pulic functions" {
  class "LOG_ENTRY() <<function>>" as log_entry_func { }
  class "TRACE() <<function>>" as trace_func { }
  class "TRACE_*() <<function>>" as trace_all_func{ }
  class "TRACE_LEVEL() <<function>>" as trace_level_func { }
}

' Relationships
Logger *-- Configuration : "owns"
Logger *-- NvConfig : "owns"
Logger *-- SharedMemoryWriter : "owns"

Logger ..> log_entry : "<< friend >>"

log_entry --* SharedMemoryWriter : "owns"
log_entry --> Logger : "<< uses >>"

NvConfig *-- NvMsgDescriptor : "<< uses >>"
NvMsgDescriptor *-- LoggingIdentifier

log_entry_func --> log_entry
trace_func --> log_entry
trace_all_func --> log_entry
trace_level_func --> log_entry
@enduml
